# mirror

./: .gitignore  .gitmodules  README.md  do_it.sh  do_move.sh  pyproject.toml  run-000.sh  run-001.sh  run-002-ori.sh  run-002.sh  run-a22-mtp3-1223.sh  run-a22-mtp3-1230.sh  run-a3-001-enough.sh  run-a3-001.sh  run-mode-10-2.sh  run-one.sh  run-qwq-mode-10-mtp7-2.sh  test_sequence_cos.py
data/: README.md  check_dataset.py  check_generated_dataset.py  conver.sh  convert_distill_to_text.py  convert_sharegpt_to_jsonl.py  convert_sharegpt_to_text.py  convert_standard.py  preprocess_data_distilled.py
gpt3/: README.md  convert_ckpt.py  convert_ckpt.sh  convert_ckpt_native.py  enough_patch.py  gpt_config.yaml  mtp_is_enough.py  multi_layers_mtp.py  patch_gpt.py  patch_mtp.py  pretrain_gpt.py  train_gpt3_with_qwen3_tokenizer.sh  train_gpt3_with_qwen3_tokenizer_multinode-dp8-ep8.sh  train_gpt3_with_qwen3_tokenizer_multinode-tp4-mode-10-2.sh  train_gpt3_with_qwen3_tokenizer_multinode-tp4.sh  train_gpt3_with_qwen3_tokenizer_multinode.sh  training.py
gpt3/cache_free_mtp/: cache_free_mtp.py  cache_free_multi_token_prediction.py  mamba_like_block.py  mamba_like_layer.py  mamba_like_mixer.py  one_layer.py
gpt3/qwen3/: gpt_layer_specs.py
logs/: convert_to_tensorboard.py
