[project]
name = "mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "jsonlines>=4.0.0",
    "omegaconf>=2.3.0",
    "tensorboard>=2.20.0",
    "tensorstore!=0.1.46,!=0.1.72",
    "torch==2.9.1",
]
